Profile Folder/chrome/partials/chrome/_toolbars.scss
:root {
    --toolbar-bgcolor: #e6effa !important;
}

@supports not -moz-bool-pref('BeautyFox.appearance.IE10') {
    @supports -moz-bool-pref('BeautyFox.option.useAccentColourToolbars') {
        :root {
            --toolbar-bgcolor: color-mix(in srgb, var(--userAccentColor) 10%, white) !important;
        }
    }
}

@supports -moz-bool-pref("BeautyFox.appearance.IE10") {
    :root {
        --toolbar-bgcolor: #f7f7f7 !important;
    }
}

#history-menu {
    display: none !important;
}

#bookmarksMenu {
    .menubar-text {
        &::before {
            content: var(--favorites-label) !important;
        }
    }
}

.toolbarbutton-icon {
    border-radius: 0 !important;
}

#suggestedsites_bruni_com-BAP,
#unified-extensions-button {
    padding: 3px !important;
    align-items: center !important;

    @supports not -moz-bool-pref('BeautyFox.option.moveExtensionsButtonToEndToolbar') {
        &::after {
            content: url(images/dropdown.png);
            margin-bottom: 6px;
            margin-left: 6px;
            margin-right: 3px;
        }
    }

    &:active,
    &[open="true"] {
        &::after,
        .toolbarbutton-icon,
        .toolbarbutton-text {
            transform: translateX(1px) translateY(1px);
        }
    }

    .toolbarbutton-badge-stack {
        padding: 0 !important;
        margin-inline-end: 4px;
    }

    .toolbarbutton-text {
        display: block !important;
        padding: 0 !important;
        min-height: 0 !important;
    }

    .toolbarbutton-icon {
        height: 16px !important;
        width: 16px !important;
        padding: 0 !important;
        margin-inline-end: 4px !important;
    }
}

#suggestedsites_bruni_com-BAP {
    list-style-image: url('chrome://userchrome/content/resources/ieframe.dll/Icon Group/30788.ico') !important;

    .toolbarbutton-icon {
        margin-inline-end: 0 !important;
    }
}

#unified-extensions-button {
    list-style-image: url('chrome://userchrome/content/resources/ieframe.dll/Icon Group/110.ico') !important;

    .toolbarbutton-text {
        &::before {
            content: var(--get-more-add-ons-label) !important;
        }
    }
}

#newToolbar {
    display: flex;
    align-items: end;
    appearance: auto;
    -moz-default-appearance: -moz-window-titlebar;
}

#PersonalToolbar {
    toolbaritem:first-of-type {
        margin-right: 0 !important;
    }
    
    toolbarbutton:not(#PlacesChevron) {
        appearance: auto !important;
    }

    &[collapsed="true"] {
        visibility: visible !important;

        &.instant {
            visibility: visible !important;
        }
    }

    #suggestedsites_bruni_com-BAP {
        align-items: center !important;

        .toolbarbutton-text {
            display: block !important;
            padding-top: 0 !important;
            min-height: 0 !important;
        }
    }

    .toolbaritem-combined-buttons {
        margin-inline: 0 !important;
    }
}

#addonsBar {
    background-color: transparent !important;
}

#statusbarContainer {
    position: relative;
    display: flex;
    justify-content: end;
    align-items: end;
    padding-top: 0;
    padding-bottom: 0;
    border-bottom: 1px solid var(--browser-outer-border-color);
    border-left: 1px solid var(--browser-outer-border-color);
    border-right: 1px solid var(--browser-outer-border-color);
    border-radius: 0px 0px 3px 3px;
    max-height: 0px;
    opacity: 0;
    z-index: 1;
    
    &::before {
        content: '';
        position: absolute;
        left: 0;
        top: -1px;
        width: calc(100% - 2px);
        height: 100%;
        border-bottom: 1px solid var(--browser-inner-border-color) !important;
        border-left: 1px solid var(--browser-inner-border-color) !important;
        border-right: 1px solid var(--browser-inner-border-color) !important;
        z-index: -1;
    }

    #statusbarBackground {
        position: absolute;
        left: 1px;
        top: 0;
        width: calc(100% - 4px);
        height: calc(100% - 3px);
        background-color: #f1edec;
        border: 1px solid rgba(255, 255, 255, .5);
        z-index: -1;

        &::after {
            content: '';
            position: absolute;
            left: -1px;
            top: -1px;
            width: calc(100% + 2px);
            pointer-events: none;
            border-top: 1px solid #aaabab;
        }
    }

    > div {
        height: 100%;
        display: flex;
        align-items: center;
    }

    p {
        margin: 0;
        height: fit-content;
    }

    #statusbarTextContainer {
        margin-right: auto;
    }

    #statusbarInternetProtectionModeContainer {
        padding-left: 4px;
        width: 100%;
        max-width: 270px;
        display: none;

        &::before {
            content: url('images/statusGlobe.png');
            margin-right: 5px;
            margin-bottom: -2px;
        }
    }

    #addonsBar {
        margin-right: 108px !important;
        min-width: 130px !important;
        min-height: 22px !important;
        display: flex !important;
        padding-left: 10px !important;
    
        .toolbarbutton-badge-stack {
            padding: 0 !important;
        }
    }

    #gripper {
        margin-right: 1px;
    }

    #statusbarZoomContainer {
        padding-left: 10px;
        margin-right: 22px;
    }

    .toolbarbutton-badge {
        margin: 0 !important;
        margin-inline-end: 0 !important;
        font-family: normal !important;
        padding: 0 !important;
    }
}
/* ... */

